generated/myGrammarParser.cpp

// Generated from myGrammar.g4 by ANTLR 4.13.2


#include "myGrammarVisitor.h"

#include "myGrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyGrammarParserStaticData final {
  MyGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyGrammarParserStaticData(const MyGrammarParserStaticData&) = delete;
  MyGrammarParserStaticData(MyGrammarParserStaticData&&) = delete;
  MyGrammarParserStaticData& operator=(const MyGrammarParserStaticData&) = delete;
  MyGrammarParserStaticData& operator=(MyGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mygrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MyGrammarParserStaticData> mygrammarParserStaticData = nullptr;

void mygrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mygrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(mygrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MyGrammarParserStaticData>(
    std::vector<std::string>{
      "prog", "statement", "block_stmt", "declaration_stmt", "assignment_stmt", 
      "print_stmt", "if_stmt", "while_stmt", "func_decl_stmt", "return_stmt", 
      "expr"
    },
    std::vector<std::string>{
      "", "", "", "", "'let'", "'if'", "'else'", "'while'", "'print'", "'true'", 
      "'false'", "'null'", "'func'", "'return'", "", "", "", "'('", "')'", 
      "'{'", "'}'", "','", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'=='", 
      "'!='", "'<'", "'<='", "'>'", "'>='"
    },
    std::vector<std::string>{
      "", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "KW_LET", "KW_IF", "KW_ELSE", 
      "KW_WHILE", "KW_PRINT", "KW_TRUE", "KW_FALSE", "KW_NULL", "KW_FUNC", 
      "KW_RETURN", "NUMBER", "STRING", "ID", "LPAREN", "RPAREN", "LBRACE", 
      "RBRACE", "COMMA", "SEMICOLON", "ASSIGN", "ADD", "SUB", "MUL", "DIV", 
      "EQ", "NEQ", "LT", "LE", "GT", "GE", "AND", "OR", "NOT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mygrammarParserStaticData = std::move(staticData);
}

}

myGrammarParser::myGrammarParser(TokenStream *input) : myGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

myGrammarParser::myGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  myGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mygrammarParserStaticData->atn, mygrammarParserStaticData->decisionToDFA, mygrammarParserStaticData->sharedContextCache, options);
}

myGrammarParser::~myGrammarParser() {
  delete _interpreter;
}

const atn::ATN& myGrammarParser::getATN() const {
  return *mygrammarParserStaticData->atn;
}

std::string myGrammarParser::getGrammarFileName() const {
  return "myGrammar.g4";
}

const std::vector<std::string>& myGrammarParser::getRuleNames() const {
  return mygrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& myGrammarParser::getVocabulary() const {
  return mygrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView myGrammarParser::getSerializedATN() const {
  return mygrammarParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

myGrammarParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::ProgContext::EOF() {
  return getToken(myGrammarParser::EOF, 0);
}

std::vector<myGrammarParser::StatementContext *> myGrammarParser::ProgContext::statement() {
  return getRuleContexts<myGrammarParser::StatementContext>();
}

myGrammarParser::StatementContext* myGrammarParser::ProgContext::statement(size_t i) {
  return getRuleContext<myGrammarParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> myGrammarParser::ProgContext::SEMICOLON() {
  return getTokens(myGrammarParser::SEMICOLON);
}

tree::TerminalNode* myGrammarParser::ProgContext::SEMICOLON(size_t i) {
  return getToken(myGrammarParser::SEMICOLON, i);
}


size_t myGrammarParser::ProgContext::getRuleIndex() const {
  return myGrammarParser::RuleProg;
}


std::any myGrammarParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::ProgContext* myGrammarParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, myGrammarParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68720263088) != 0)) {
      setState(22);
      statement();
      setState(23);
      match(myGrammarParser::SEMICOLON);
      setState(29);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(30);
    match(myGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

myGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t myGrammarParser::StatementContext::getRuleIndex() const {
  return myGrammarParser::RuleStatement;
}

void myGrammarParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PrintStmtContext ------------------------------------------------------------------

myGrammarParser::Print_stmtContext* myGrammarParser::PrintStmtContext::print_stmt() {
  return getRuleContext<myGrammarParser::Print_stmtContext>(0);
}

myGrammarParser::PrintStmtContext::PrintStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfStmtContext ------------------------------------------------------------------

myGrammarParser::If_stmtContext* myGrammarParser::IfStmtContext::if_stmt() {
  return getRuleContext<myGrammarParser::If_stmtContext>(0);
}

myGrammarParser::IfStmtContext::IfStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclarationStmtContext ------------------------------------------------------------------

myGrammarParser::Declaration_stmtContext* myGrammarParser::DeclarationStmtContext::declaration_stmt() {
  return getRuleContext<myGrammarParser::Declaration_stmtContext>(0);
}

myGrammarParser::DeclarationStmtContext::DeclarationStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::DeclarationStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitDeclarationStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStmtContext ------------------------------------------------------------------

myGrammarParser::ExprContext* myGrammarParser::ExprStmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}

myGrammarParser::ExprStmtContext::ExprStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::ExprStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileStmtContext ------------------------------------------------------------------

myGrammarParser::While_stmtContext* myGrammarParser::WhileStmtContext::while_stmt() {
  return getRuleContext<myGrammarParser::While_stmtContext>(0);
}

myGrammarParser::WhileStmtContext::WhileStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BlockStmtContext ------------------------------------------------------------------

myGrammarParser::Block_stmtContext* myGrammarParser::BlockStmtContext::block_stmt() {
  return getRuleContext<myGrammarParser::Block_stmtContext>(0);
}

myGrammarParser::BlockStmtContext::BlockStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::BlockStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitBlockStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentStmtContext ------------------------------------------------------------------

myGrammarParser::Assignment_stmtContext* myGrammarParser::AssignmentStmtContext::assignment_stmt() {
  return getRuleContext<myGrammarParser::Assignment_stmtContext>(0);
}

myGrammarParser::AssignmentStmtContext::AssignmentStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDeclStmtContext ------------------------------------------------------------------

myGrammarParser::Func_decl_stmtContext* myGrammarParser::FuncDeclStmtContext::func_decl_stmt() {
  return getRuleContext<myGrammarParser::Func_decl_stmtContext>(0);
}

myGrammarParser::FuncDeclStmtContext::FuncDeclStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::FuncDeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitFuncDeclStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStmtContext ------------------------------------------------------------------

myGrammarParser::Return_stmtContext* myGrammarParser::ReturnStmtContext::return_stmt() {
  return getRuleContext<myGrammarParser::Return_stmtContext>(0);
}

myGrammarParser::ReturnStmtContext::ReturnStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any myGrammarParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}
myGrammarParser::StatementContext* myGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, myGrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(41);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<myGrammarParser::DeclarationStmtContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(32);
      declaration_stmt();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<myGrammarParser::AssignmentStmtContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(33);
      assignment_stmt();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<myGrammarParser::PrintStmtContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(34);
      print_stmt();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<myGrammarParser::IfStmtContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(35);
      if_stmt();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<myGrammarParser::WhileStmtContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(36);
      while_stmt();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<myGrammarParser::BlockStmtContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(37);
      block_stmt();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<myGrammarParser::FuncDeclStmtContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(38);
      func_decl_stmt();
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<myGrammarParser::ReturnStmtContext>(_localctx);
      enterOuterAlt(_localctx, 8);
      setState(39);
      return_stmt();
      break;
    }

    case 9: {
      _localctx = _tracker.createInstance<myGrammarParser::ExprStmtContext>(_localctx);
      enterOuterAlt(_localctx, 9);
      setState(40);
      expr(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Block_stmtContext ------------------------------------------------------------------

myGrammarParser::Block_stmtContext::Block_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::Block_stmtContext::LBRACE() {
  return getToken(myGrammarParser::LBRACE, 0);
}

tree::TerminalNode* myGrammarParser::Block_stmtContext::RBRACE() {
  return getToken(myGrammarParser::RBRACE, 0);
}

std::vector<myGrammarParser::StatementContext *> myGrammarParser::Block_stmtContext::statement() {
  return getRuleContexts<myGrammarParser::StatementContext>();
}

myGrammarParser::StatementContext* myGrammarParser::Block_stmtContext::statement(size_t i) {
  return getRuleContext<myGrammarParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> myGrammarParser::Block_stmtContext::SEMICOLON() {
  return getTokens(myGrammarParser::SEMICOLON);
}

tree::TerminalNode* myGrammarParser::Block_stmtContext::SEMICOLON(size_t i) {
  return getToken(myGrammarParser::SEMICOLON, i);
}


size_t myGrammarParser::Block_stmtContext::getRuleIndex() const {
  return myGrammarParser::RuleBlock_stmt;
}


std::any myGrammarParser::Block_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitBlock_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::Block_stmtContext* myGrammarParser::block_stmt() {
  Block_stmtContext *_localctx = _tracker.createInstance<Block_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, myGrammarParser::RuleBlock_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(myGrammarParser::LBRACE);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68720263088) != 0)) {
      setState(44);
      statement();
      setState(45);
      match(myGrammarParser::SEMICOLON);
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(myGrammarParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaration_stmtContext ------------------------------------------------------------------

myGrammarParser::Declaration_stmtContext::Declaration_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::Declaration_stmtContext::KW_LET() {
  return getToken(myGrammarParser::KW_LET, 0);
}

tree::TerminalNode* myGrammarParser::Declaration_stmtContext::ID() {
  return getToken(myGrammarParser::ID, 0);
}

tree::TerminalNode* myGrammarParser::Declaration_stmtContext::ASSIGN() {
  return getToken(myGrammarParser::ASSIGN, 0);
}

myGrammarParser::ExprContext* myGrammarParser::Declaration_stmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}


size_t myGrammarParser::Declaration_stmtContext::getRuleIndex() const {
  return myGrammarParser::RuleDeclaration_stmt;
}


std::any myGrammarParser::Declaration_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitDeclaration_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::Declaration_stmtContext* myGrammarParser::declaration_stmt() {
  Declaration_stmtContext *_localctx = _tracker.createInstance<Declaration_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, myGrammarParser::RuleDeclaration_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(myGrammarParser::KW_LET);
    setState(55);
    antlrcpp::downCast<Declaration_stmtContext *>(_localctx)->name = match(myGrammarParser::ID);
    setState(58);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == myGrammarParser::ASSIGN) {
      setState(56);
      match(myGrammarParser::ASSIGN);
      setState(57);
      antlrcpp::downCast<Declaration_stmtContext *>(_localctx)->value = expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assignment_stmtContext ------------------------------------------------------------------

myGrammarParser::Assignment_stmtContext::Assignment_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::Assignment_stmtContext::ASSIGN() {
  return getToken(myGrammarParser::ASSIGN, 0);
}

tree::TerminalNode* myGrammarParser::Assignment_stmtContext::ID() {
  return getToken(myGrammarParser::ID, 0);
}

myGrammarParser::ExprContext* myGrammarParser::Assignment_stmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}


size_t myGrammarParser::Assignment_stmtContext::getRuleIndex() const {
  return myGrammarParser::RuleAssignment_stmt;
}


std::any myGrammarParser::Assignment_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitAssignment_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::Assignment_stmtContext* myGrammarParser::assignment_stmt() {
  Assignment_stmtContext *_localctx = _tracker.createInstance<Assignment_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, myGrammarParser::RuleAssignment_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    antlrcpp::downCast<Assignment_stmtContext *>(_localctx)->name = match(myGrammarParser::ID);
    setState(61);
    match(myGrammarParser::ASSIGN);
    setState(62);
    antlrcpp::downCast<Assignment_stmtContext *>(_localctx)->value = expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Print_stmtContext ------------------------------------------------------------------

myGrammarParser::Print_stmtContext::Print_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::Print_stmtContext::KW_PRINT() {
  return getToken(myGrammarParser::KW_PRINT, 0);
}

myGrammarParser::ExprContext* myGrammarParser::Print_stmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}


size_t myGrammarParser::Print_stmtContext::getRuleIndex() const {
  return myGrammarParser::RulePrint_stmt;
}


std::any myGrammarParser::Print_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitPrint_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::Print_stmtContext* myGrammarParser::print_stmt() {
  Print_stmtContext *_localctx = _tracker.createInstance<Print_stmtContext>(_ctx, getState());
  enterRule(_localctx, 10, myGrammarParser::RulePrint_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(myGrammarParser::KW_PRINT);
    setState(65);
    antlrcpp::downCast<Print_stmtContext *>(_localctx)->value = expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

myGrammarParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::If_stmtContext::KW_IF() {
  return getToken(myGrammarParser::KW_IF, 0);
}

tree::TerminalNode* myGrammarParser::If_stmtContext::LPAREN() {
  return getToken(myGrammarParser::LPAREN, 0);
}

tree::TerminalNode* myGrammarParser::If_stmtContext::RPAREN() {
  return getToken(myGrammarParser::RPAREN, 0);
}

myGrammarParser::ExprContext* myGrammarParser::If_stmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}

std::vector<myGrammarParser::Block_stmtContext *> myGrammarParser::If_stmtContext::block_stmt() {
  return getRuleContexts<myGrammarParser::Block_stmtContext>();
}

myGrammarParser::Block_stmtContext* myGrammarParser::If_stmtContext::block_stmt(size_t i) {
  return getRuleContext<myGrammarParser::Block_stmtContext>(i);
}

tree::TerminalNode* myGrammarParser::If_stmtContext::KW_ELSE() {
  return getToken(myGrammarParser::KW_ELSE, 0);
}


size_t myGrammarParser::If_stmtContext::getRuleIndex() const {
  return myGrammarParser::RuleIf_stmt;
}


std::any myGrammarParser::If_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitIf_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::If_stmtContext* myGrammarParser::if_stmt() {
  If_stmtContext *_localctx = _tracker.createInstance<If_stmtContext>(_ctx, getState());
  enterRule(_localctx, 12, myGrammarParser::RuleIf_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(myGrammarParser::KW_IF);
    setState(68);
    match(myGrammarParser::LPAREN);
    setState(69);
    antlrcpp::downCast<If_stmtContext *>(_localctx)->condition = expr(0);
    setState(70);
    match(myGrammarParser::RPAREN);
    setState(71);
    antlrcpp::downCast<If_stmtContext *>(_localctx)->thenBlock = block_stmt();
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == myGrammarParser::KW_ELSE) {
      setState(72);
      match(myGrammarParser::KW_ELSE);
      setState(73);
      antlrcpp::downCast<If_stmtContext *>(_localctx)->elseBlock = block_stmt();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_stmtContext ------------------------------------------------------------------

myGrammarParser::While_stmtContext::While_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::While_stmtContext::KW_WHILE() {
  return getToken(myGrammarParser::KW_WHILE, 0);
}

tree::TerminalNode* myGrammarParser::While_stmtContext::LPAREN() {
  return getToken(myGrammarParser::LPAREN, 0);
}

tree::TerminalNode* myGrammarParser::While_stmtContext::RPAREN() {
  return getToken(myGrammarParser::RPAREN, 0);
}

myGrammarParser::ExprContext* myGrammarParser::While_stmtContext::expr() {
  return getRuleContext<myGrammarParser::ExprContext>(0);
}

myGrammarParser::Block_stmtContext* myGrammarParser::While_stmtContext::block_stmt() {
  return getRuleContext<myGrammarParser::Block_stmtContext>(0);
}


size_t myGrammarParser::While_stmtContext::getRuleIndex() const {
  return myGrammarParser::RuleWhile_stmt;
}


std::any myGrammarParser::While_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<myGrammarVisitor*>(visitor))
    return parserVisitor->visitWhile_stmt(this);
  else
    return visitor->visitChildren(this);
}

myGrammarParser::While_stmtContext* myGrammarParser::while_stmt() {
  While_stmtContext *_localctx = _tracker.createInstance<While_stmtContext>(_ctx, getState());
  enterRule(_localctx, 14, myGrammarParser::RuleWhile_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(myGrammarParser::KW_WHILE);
    setState(77);
    match(myGrammarParser::LPAREN);
    setState(78);
    antlrcpp::downCast<While_stmtContext *>(_localctx)->condition = expr(0);
    setState(79);
    match(myGrammarParser::RPAREN);
    setState(80);
    antlrcpp::downCast<While_stmtContext *>(_localctx)->body = block_stmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_decl_stmtContext ------------------------------------------------------------------

myGrammarParser::Func_decl_stmtContext::Func_decl_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* myGrammarParser::Func_decl_stmtContext::KW_FUNC() {
  return getToken(myGrammarParser::KW_FUNC, 0);
}
